# ot-harjoitustyo

./: .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: config.py  main.py
src/database/: database_connection.py  initialize_database.py
src/models/: task.py  user.py
src/repositories/: task_repository.py  user_repository.py
src/services/: task_service.py  user_service.py
src/tests/: task_service_test.py  user_service_test.py
src/ui/: add_view.py  create_user_view.py  front_view.py  remove_view.py  ui.py
