[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["nedukka <nedukka11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
invoke = "^2.2.1"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
coverage = "^7.13.5"
pytest-dotenv = "^0.5.2"
pylint = "^4.0.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"