[project]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = [
    {name = "nedukka",email = "nedukka11@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
